feat: Update user
